<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:background="@color/blue"
    tools:context=".Report" >

    <TextView
        android:id="@+id/layout_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/report"
        android:text="@string/report"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/layo_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_report"
        android:layout_marginTop="5dp"
        android:background="@color/report"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/selezione"
        android:textColor="@color/white"
        android:textSize="8pt" />

    <LinearLayout
        android:id="@+id/linear_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layo_select"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sel_entrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/entrata"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sel_uscite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/uscita"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sel_entrambi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/entrambe"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/sel_categoria"
        android:layout_below="@+id/linear_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/report"
        android:gravity="center"
        android:text="@string/categoria"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="8pt" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sel_categoria"
        android:textColor="@color/white"
        android:prompt="@string/filtri"
        android:textSize="8pt"
        android:drawSelectorOnTop = "true" />
     <TextView
        android:id="@+id/sel_periodo"
        android:layout_below="@+id/spinner_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/report"
        android:gravity="center"
        android:text="@string/periodo"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="8pt" />
     <LinearLayout
         android:id="@+id/sel_data"
         android:layout_below="@+id/sel_periodo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:orientation="horizontal" >
        <Button
            android:id="@+id/sel_dataDA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/data"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sel_dataA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/data"
            android:textColor="@color/white" /> 
     </LinearLayout>
     <TextView
        android:id="@+id/sel_tipo_graf"
        android:layout_below="@+id/sel_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/report"
        android:gravity="center"
        android:text="@string/tipo"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="8pt" />
    <LinearLayout
         android:id="@+id/tipo_rep"
         android:layout_below="@+id/sel_tipo_graf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <Button
            android:id="@+id/sel_grafico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/grafo"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/grafico"
             />

        <Button
            android:id="@+id/sel_bilancio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bilancio"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/partita_doppia"
             /> 
        <Button
            android:id="@+id/stampa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/stampa"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/stampa"
            />
     </LinearLayout>
</RelativeLayout>
